--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,3 +34,10 @@ html {
   code {
     font-size: 80%;
   }
+
+  p.card-text{
+    font-size:19px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
