--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,6 +108,10 @@ html {
   overflow: auto;
 }
 
+.menu-title {
+  display: flex;
+  justify-content: center;
+}
 .price-quantity{
   display: flex;
 }
@@ -134,6 +138,7 @@ p.card-text.menu-ingredients::-webkit-scrollbar{
 
 .card {
   background-color: #f0b267;
+  color: black;
 }
   .fixed{
     width: 400px;
@@ -186,5 +191,14 @@ p.card-text.menu-ingredients::-webkit-scrollbar{
 }
 
 .navbar-color {
-  background-image:  linear-gradient(to bottom, #28a745, #28a745, #174622) !important;
+  background-image:  linear-gradient(to bottom, #28a745, #174622) !important;
 }
+
+/* .button:hover {
+  color: #000;
+  box-shadow: 0 0 5px #FFFF00,
+              0 0 20px rgb(255 255 0 / 0.8),
+              0 0 35px rgb(255 255 0 / 0.7),
+              0 0 50px rgb(255 255 0 / 0.6);
+  border-color: #fff;
+} */
